# airtest_mobileauto

./: .gitignore  CLAUDE.md  PyTorch_OCR_库对比文档.md  README.md  Sendpypi.bat  build.bat  build.ps1  build.sh  build_airtest_nuitka.ps1  localbuild.ps1  localbuild37.ps1  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
airtest_mobileauto/: __init__.py  control.py  manyexists.py  ocr.py
airtest_mobileauto/tool/: .gitignore  README.md  demo_capture_and_move_detector.py  demo_deatch_detector.py  image_capture.py  image_capture_doc.md  image_detector.py  image_detector_doc.md  image_motion_detector.py  image_motion_detector_doc.md
字典.分路.android.var_dict_N/: android.var_dict_0.txt  android.var_dict_1.txt  android.var_dict_2.ce.txt  字典.中路.android.var_dict_N.txt  字典.发育.android.var_dict_N.txt  字典.对抗.android.var_dict_N.txt  字典.打野.android.var_dict_N.txt  字典.游走.android.var_dict_N.txt
